fix aligning and editor position

--- a/src/app.css
+++ b/src/app.css
@@ -29,9 +29,10 @@ body {
 #app {
   width: 100vw;
   height: 100vh;
-  margin: 0;
+  margin: 10px;
   padding: 1rem;
   display: flex;
+  justify-content:center;
 }
 
 button {
